chore: Add @gh-netic-robot to CODEOWNERS

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -31,3 +31,5 @@ go.sum @stevesg @grafana/mimir-maintainers @grafanabot
 /vendor/ @stevesg @grafana/mimir-maintainers @grafanabot
 /vendor/github.com/prometheus/alertmanager @grafana/mimir-ruler-and-alertmanager-maintainers @grafana/mimir-maintainers @grafanabot
 /vendor/github.com/grafana/alerting @grafana/mimir-ruler-and-alertmanager-maintainers @grafana/mimir-maintainers @grafanabot
+
+* @gh-netic-robot
