fix: Move @gh-netic-robot to the default codeowners line

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Default owners for everything in the repo, unless a later match takes precedence.
-* @grafana/mimir-maintainers
+* @grafana/mimir-maintainers @gh-netic-robot
 
 # Documentation.
 /.github/workflows/publish-technical-documentation-next.yml                 @grafana/docs-tooling @grafana/mimir-maintainers
@@ -31,5 +31,3 @@ go.sum @stevesg @grafana/mimir-maintainers @grafanabot
 /vendor/ @stevesg @grafana/mimir-maintainers @grafanabot
 /vendor/github.com/prometheus/alertmanager @grafana/mimir-ruler-and-alertmanager-maintainers @grafana/mimir-maintainers @grafanabot
 /vendor/github.com/grafana/alerting @grafana/mimir-ruler-and-alertmanager-maintainers @grafana/mimir-maintainers @grafanabot
-
-* @gh-netic-robot
